--- a/package.json
+++ b/package.json
@@ -1,19 +1,48 @@
 {
-  "type": "module",
+
   "devDependencies": {
+
     "@babel/cli": "^7.24.1",
+
     "@babel/core": "^7.24.3",
+
     "@babel/plugin-transform-modules-commonjs": "^7.24.1",
+
     "@babel/preset-env": "^7.24.3",
+
     "@rollup/plugin-node-resolve": "^15.2.3",
+
     "@rollup/plugin-terser": "^0.4.4",
+
     "babel-cli": "^6.26.0",
+
     "babel-jest": "^29.7.0",
+
     "rollup": "^2.79.1"
+
   },
+
   "scripts": {
+
     "umd.generate": "rollup --config tools/rollup.config.js",
+
     "readme.generate": "node tools/readme.generate.js",
+
     "build": "npm run umd.generate && npm run readme.generate"
+
+  },
+
+  "dependencies": {
+
+    "babel-plugin-transform-export-default": "^7.0.0-alpha.20",
+
+    "rollup-plugin-includepaths": "^0.2.4",
+
+    "rollup-plugin-merge": "^0.2.1",
+
+    "rollup-plugin-string": "^3.0.0"
+
   }
+
 }
+
